chapter 1 + majority of default text removed

--- a/Abstrakt.tex
+++ b/Abstrakt.tex
@@ -1,18 +1,7 @@
 \thispagestyle{empty}
-\section*{Abstrakt v štátnom jazyku}
-Abstrakt obsahuje informáciu o cieľoch práce, jej stručnom obsahu a v závere abstraktu sa charakterizuje splnenie cieľa, výsledky a význam celej práce. Súčasťou abstraktu je 3 - 5 kľúčových slov. Abstrakt sa píše súvisle ako jeden odsek a jeho rozsah je spravidla 100 až 500 slov. 
-
-{\it Abstraktu predchádza uvedenie mena autora, názov práce, typ práce, názov fakulty a katedry, meno vedúceho práce, mesto, rok, počet strán.
-Príklad abstraktu (upravené): } \\
-NOVÁK, Vladimír: Indexové stratégie pre dynamické a stochastické úlohy [Bakalárska práca], Univerzita Komenského v Bratislave, Fakulta matematiky, fyziky a informatiky, Katedra aplikovanej matematiky a štatistiky; školiteľ: Mgr. Peter Jacko, PhD., Bratislava, 2011,  38 s.
-
-V našej práci sa zaoberáme Whittlovou metódou odvodenia indexových stratégií
-pre problémy formulované v prostredí Markovovských rozhodovacích procesov. Analyzujeme model pre rozvrhovanie úloh užívateľov viacerých tried, v ktorom užívatelia môžu aj odchádzať, ak ich úloha nie je ukončená včas. Naším cieľom je minimalizácia celkových nákladov a pokút za odchody užívateľov. Práca poskytuje analytické riešenie optimálnych stratégií pre prípady s 1 a 2 užívateľmi v systéme. Pre prípad s viacerými užívateľmi sme použitím posledných poznatkov z oblasti "Multiarmed restless bandit" odvodili novú jednoduchú stratégiu, označovanú ako AJN,
-pre systémy s povinným, aj bez povinného obsluhovania. Túto stratégiu navrhujeme
-používať aj v prípadoch s príchodmi užívateľov. Okrem toho poukazujeme aj na
-dôkladnú štúdiu numerických experimentov pre oba systémy, v ktorých porovnávame
-AJN indexovú stratégiu s určitými dvomi štandardnými stratégiami. Táto výpočtová štúdia naznačuje, že naša stratégia je takmer vždy lepšia, alebo porovnateľná s ostatnými stratégiami a často býva optimálna.
+\section*{Abstrakt}
+TODO
 
 \begin{flushleft}
-  \textbf{Kľúčové slová:} Markovovské rozhodovacie procesy, Multi-armed restless bandit, Whittlov index, Indexové stratégie, Bellmanova rovnica
+  \textbf{Kľúčové slová:} lineárny regresný model
 \end{flushleft}
