--- a/Bakalarka.tex
+++ b/Bakalarka.tex
@@ -17,7 +17,7 @@
 \usepackage{ifthen}
 
 \newtheorem{defin}{Definícia}[section]
-\newtheorem{thm}[defin]{Veta}
+\newtheorem{theorem}[defin]{Veta}
 \newtheorem{prop}[defin]{Tvrdenie}
 \newtheorem{lema}[defin]{Lema}
 \newtheorem{cor}[defin]{Dôsledok}
@@ -61,8 +61,10 @@ plainpages=false
 
   \input{Podakovanie}
 
+  \newpage
   \input{Abstrakt}
 
+  \newpage
   \input{Abstract}
   \newpage \tableofcontents
   \setcounter{page}{7}
