--- a/Uvod.tex
+++ b/Uvod.tex
@@ -1,16 +1,1 @@
-
-Hlavnú textovú časť záverečnej práce tvorí: úvod, jadro, záver, zoznam použitej literatúry.
-
-V úvode autor stručne a výstižne charakterizuje stav poznania alebo praxe v oblasti, ktorá je predmetom záverečnej práce a oboznamuje čitateľa s významom, cieľmi a zámermi práce. Autor v úvode zdôrazňuje, prečo je práca dôležitá a prečo sa rozhodol spracovať danú tému. 
-
-
-Rozsah úvodu je  1 až 1,5 strany.  Úvod spravidla obsahuje: 
-\begin{itemize}
-\item vymedzenie problematiky BP v kontexte aplikácií matematiky;
-\item zdôvodnenie aktuálnosti danej témy;
-\item charakterizácia stavu poznania alebo praxe (odkazy na literatúru);
-\item nastolenie problémov, ktoré chce autor v BP riešiť;
-\item vytýčenie cieľov, ktoré majú byť v BP dosiahnuté;
-\item uvedenie použitých metód a postupov riešenia;
-\item stručný náčrt obsahu jednotlivých kapitol BP.
-\end{itemize}
+TODO
