--- a/Bakalarka.tex
+++ b/Bakalarka.tex
@@ -79,7 +79,11 @@ plainpages=false
     \addcontentsline{toc}{section}{Úvod}
     
     \input{06 Uvod} 
-	\input{07 kap1} 
+
+  \newpage  
+	\input{07 kap1}
+
+  \newpage
 	\input{08 kap2} 
 
 	\newpage
