--- a/Bakalarka.tex
+++ b/Bakalarka.tex
@@ -21,8 +21,10 @@
 \newtheorem{prop}[defin]{Tvrdenie}
 \newtheorem{lema}[defin]{Lema}
 \newtheorem{cor}[defin]{Dôsledok}
+\newtheorem{hypoteza}{Hypotéza}[section]
 \newtheoremstyle{comment}{}{}{}{}{}{:}{ }{#1}
 \theoremstyle{comment}
+\newtheorem{dokaz}{Dôkaz}[section]
 \newtheorem{com}{\textit{Poznámka}}
 
 \usepackage{hyperref}                                     
