--- a/Bakalarka.tex
+++ b/Bakalarka.tex
@@ -16,6 +16,8 @@
 \usepackage[small,bf]{caption}
 \usepackage{ifthen}
 
+\usepackage{xcolor}
+
 \newtheorem{defin}{Definícia}[section]
 \newtheorem{theorem}[defin]{Veta}
 \newtheorem{prop}[defin]{Tvrdenie}
