--- a/Bakalarka.tex
+++ b/Bakalarka.tex
@@ -88,24 +88,27 @@ plainpages=false
 	\input{07 kap1}
 
   \newpage
-	\input{08 kap2} 
+	\input{08 kap2}
+
+  \newpage
+  \input{09 kap3}
 
 	\newpage
   \section*{Záver}
     \addcontentsline{toc}{section}{Záver}
     \markboth{ZÁVER}{ZÁVER} 
-    \input{09 Zaver}
+    \input{10 Zaver}
   
   \newpage
   \renewcommand{\refname}{Zoznam použitej literatúry}
-  \input{10 Literatura}
+  \input{11 Literatura}
   
 	\newpage
   \appendix
   \section*{Príloha A} 
     \addcontentsline{toc}{section}{Príloha A}
     \markboth{Príloha A}{Príloha A}
-    \input{11 AppendixA}
+    \input{12 AppendixA}
     %\begin{comment}
 %\end{comment}
 \end{document}
