--- a/11 Literatura.tex
+++ b/11 Literatura.tex
@@ -2,4 +2,6 @@
 
 	\bibitem{kniha} Pázman, A., Lacko, V.: {\it Prednášky z regresných modelov}, Vydavateľstvo UK, Bratislava, 2012, 2015
 
+	\bibitem{kniha} http://oeis.org/A002724
+
 \end{thebibliography}
